--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ dependencies {
 
 	include(implementation(annotationProcessor("com.github.bawnorton.mixinsquared:mixinsquared-fabric:0.2.0-beta.6")))
 
-	modImplementation files("lib/afkplus-1.21-rc1-1.5.0.jar")
+	modImplementation files("lib/afkplus-1.21.4-1.5.3.jar")
 }
 
 processResources {
